--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=http://localhost:8080/api
 REACT_APP_EMPLOYMENT_CONTRACT=
-# REACT_APP_PAYROLL_CONTRACT=
+REACT_APP_PAYROLL_CONTRACT=
